bringing back the scrolling fixed/absolute nav, works on mobile now, needs refactor later

--- a/style/nav.less
+++ b/style/nav.less
@@ -35,9 +35,9 @@ nav {
 	// or absolute bottom with .fixed class for fancy scroll-to-top
 }
 
-.fixed {
-	//position: absolute;
-	//bottom: 0;
+// add absolute as a class to avoid scroll jank on mobile
+.absolute {
+	position: absolute;
 }
 
 logo {
